# fastapi-ws-router

./: LICENSE.txt  README.md  example.py  main.py  pyproject.toml  test_ws.py
.github/workflows/: ci.yaml  release.yaml
src/fastapi_ws_router/: __about__.py  __init__.py  route.py  router.py
tests/: __init__.py  conftest.py  test_openapi.py  test_ws.py
