[tool.poetry]
name = "fastapi-ws-router"
version = "0.1.0"
description = ""
authors = ["Jack Zabolotnyi <git@mclate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
pytest="7.2.1"
pytest-asyncio="0.20.3"
pytest-httpx="0.21.3"
pytest-lazy-fixture="0.6.3"
pytest-mock="3.10.0"
pytest-xdist="3.2.0"
ruff = "0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line_length = 120
